done with display v2

--- a/batoots_ilibrary/bookcollections/templates/book-list.html
+++ b/batoots_ilibrary/bookcollections/templates/book-list.html
@@ -6,7 +6,7 @@
 <ul>
     {% for object in object_list %}
     <div class="card">
-            <img class="card-img-top" src="https://www.petmd.com/sites/default/files/Acute-Dog-Diarrhea-47066074.jpg" style="height:250px;width:250px"alt="{{object.breed}}">
+            <img class="card-img-top" src="https://www.drawingnow.com/file/videos/steps/119657/how-to-draw-an-open-book-step-7.jpg" style="height:250px;width:250px"alt="{{object.breed}}">
             <div class="card-body">
               <h4 class="card-title">{{object.title}}</h4>
               <p>Author: {{object.color}}</p>
