--- a/batoots_ilibrary/bookcollections/templates/book-list.html
+++ b/batoots_ilibrary/bookcollections/templates/book-list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+</br>
 <h1 class="mt-5">Book List</h1>
 <ul>
     {% for object in object_list %}
@@ -13,9 +13,10 @@
               <p>Publisher: {{object.publisher}}</p>
               <p>Publication: {{object.publication}}</p>
               <p>ISBN: {{object.isbn}}</p>
-              <p>Notes: {{object.notes}}</p>
+              <p>Notes: {{object.notes}}</p>    
             </div>
           </div>
+    </div>
 
     <div class="card">
         
