--- a/batoots_ilibrary/templates/base.html
+++ b/batoots_ilibrary/templates/base.html
@@ -14,7 +14,7 @@
         <header>
                 <!-- Fixed navbar -->
                 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                  <a class="navbar-brand" href="#">DogPound CMS</a>
+                  <a class="navbar-brand" href="#">Book Collections</a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="dog">Dogs</a>
+                        <a class="nav-link" href="dog">Books</a>
                       </li>
                     </ul>
                     <form class="form-inline mt-2 mt-md-0">
