done with display v3

--- a/batoots_ilibrary/bookcollections/templates/book-list.html
+++ b/batoots_ilibrary/bookcollections/templates/book-list.html
@@ -5,21 +5,9 @@
 <h1 class="mt-5">Book List</h1>
 <ul>
     {% for object in object_list %}
-    <div class="card">
-            <img class="card-img-top" src="https://www.drawingnow.com/file/videos/steps/119657/how-to-draw-an-open-book-step-7.jpg" style="height:250px;width:250px"alt="{{object.breed}}">
-            <div class="card-body">
-              <h4 class="card-title">{{object.title}}</h4>
-              <p>Author: {{object.color}}</p>
-              <p>Publisher: {{object.publisher}}</p>
-              <p>Publication: {{object.publication}}</p>
-              <p>ISBN: {{object.isbn}}</p>
-              <p>Notes: {{object.notes}}</p>
-            </div>
-          </div>
-
-    <div class="card">
-        
-    </div>
+      <li>
+        <a href="{% url 'book-detail' object.pk %}">{{ object.title }}</a> , {{object.author}}
+      </li>
     {% endfor %}
 </ul>
    
