--- a/batoots_ilibrary/bookcollections/templates/book-detail.html
+++ b/batoots_ilibrary/bookcollections/templates/book-detail.html
@@ -3,17 +3,13 @@
 {% block content %}
 
 <h1 class="mt-5">Book Details</h1>
-<ul>
+
     
-            <li>Title: {{object.title}}</li>
-              <p>Author: {{object.color}}</p>
-              <p>Publisher: {{object.publisher}}</p>
-              <p>Publication: {{object.publication}}</p>
-              <p>ISBN: {{object.isbn}}</p>
-              <p>Notes: {{object.notes}}</p>
-            </div>
-          </div>
-    
-</ul>
+<p><b>Title</b>: {{object.title}}</li>
+<p>Author: {{object.author}}</p>
+<p>Publisher: {{object.publisher}}</p>
+<p>Publication: {{object.publication}}</p>
+<p>ISBN: {{object.isbn}}</p>
+<p>Notes: {{object.notes}}</p>
    
 {% endblock %}
