--- a/batoots_ilibrary/bookcollections/templates/book-detail.html
+++ b/batoots_ilibrary/bookcollections/templates/book-detail.html
@@ -6,10 +6,10 @@
 
     
 <p><b>Title</b>: {{object.title}}</li>
-<p>Author: {{object.author}}</p>
-<p>Publisher: {{object.publisher}}</p>
-<p>Publication: {{object.publication}}</p>
-<p>ISBN: {{object.isbn}}</p>
-<p>Notes: {{object.notes}}</p>
+<p><b>Author</b>: {{object.author}}</p>
+<p><b>Publisher</b>: {{object.publisher}}</p>
+<p><b>Publication</b>: {{object.publication}}</p>
+<p><b>ISBN</b>: {{object.isbn}}</p>
+<p><b>Notes</b>: {{object.notes}}</p>
    
 {% endblock %}
